<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include android:id="@+id/title"
        layout="@layout/title_normal"/>

    <ImageView
        android:id="@+id/finish_img"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@mipmap/finsh_img"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title"
        android:layout_marginTop="33dp"/>
    <TextView
        android:id="@+id/finish_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_finish"
        android:layout_below="@id/finish_img"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/hint_size"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"/>
    <LinearLayout
        android:id="@+id/finish_total_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/finish_hint"
        android:layout_marginTop="12dp"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/qian_img"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginLeft="8dp"
            android:textColor="@color/black"
            android:textSize="24sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/gray_line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_below="@id/finish_total_ll"
        android:layout_marginTop="23dp"/>

    <RelativeLayout
        android:id="@+id/pay_way_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gray_line_1"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="13dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_way"
            android:textSize="@dimen/hint_size"/>
        <TextView
            android:id="@+id/pay_way"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/black"
            android:text="@string/pay_way_wx"
            android:textSize="@dimen/hint_size"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/get_hint_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pay_way_rl"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="13dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_get"
            android:textSize="@dimen/hint_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/black"
            android:text="@string/pay_name"
            android:textSize="@dimen/hint_size"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/login_btn"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:text="确定"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_below="@+id/get_hint_rl"
        android:layout_marginTop="79dp"/>

</RelativeLayout>