<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="107dp"
            android:layout_height="107dp"
            android:layout_marginTop="33dp"
            android:src="@mipmap/icon"
            android:layout_centerHorizontal="true" />
        <RelativeLayout
            android:id="@+id/login_phone_rl"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_below="@id/logo"
            android:layout_marginTop="44dp">
            <ImageView
                android:id="@+id/phone_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/denglu_shouji"/>
            <EditText
                android:id="@+id/login_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_phone"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/phone_img"
                android:layout_marginLeft="16dp"
                android:maxLength="11"
                android:textSize="@dimen/hint_size"
                android:inputType="phone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_pwd_rl"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_below="@id/login_phone_rl">
            <ImageView
                android:id="@+id/pwd_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/denglu_mima"/>
            <EditText
                android:id="@+id/login_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_pwd"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/pwd_img"
                android:layout_marginLeft="16dp"
                android:textSize="@dimen/hint_size"
                android:inputType="textPassword"/>
            <ImageView
                android:id="@+id/yanjing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/yanjing"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/login_forget"
            android:layout_alignParentRight="true"
            android:layout_below="@id/login_pwd_rl"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/login_btn"
            android:layout_marginLeft="31dp"
            android:layout_marginRight="31dp"
            android:text="@string/login"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_below="@id/login_pwd_rl"
            android:layout_marginTop="49dp"/>
        <TextView
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/register_btn"
            android:layout_marginLeft="31dp"
            android:layout_marginRight="31dp"
            android:text="@string/register"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_below="@id/login_btn"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:id="@+id/other_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_below="@id/register_btn"
            android:layout_marginTop="32dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/line_color"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_other"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/line_color"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/other_hint"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="22dp">
            <ImageView
                android:id="@+id/weixin_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/denglu_weixin"/>
            <ImageView
                android:id="@+id/qq_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/denglu_qq"
                android:layout_toRightOf="@id/weixin_login"
                android:layout_marginLeft="77dp"/>
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>
