<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="107dp"
            android:layout_height="107dp"
            android:layout_marginTop="33dp"
            android:src="@mipmap/icon"
            android:layout_centerHorizontal="true" />
        <RelativeLayout
            android:id="@+id/register_phone_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_below="@id/logo"
            android:layout_marginTop="44dp">
            <ImageView
                android:id="@+id/register_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/denglu_shouji"/>
            <EditText
                android:id="@+id/register_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_phone"
                android:maxLength="11"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/register_img"
                android:layout_marginLeft="16dp"
                android:textSize="@dimen/hint_size"
                android:inputType="phone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/register_verif_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/register_phone_rl"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp">

            <ImageView
                android:id="@+id/register_verif_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/zhuce_safe" />

            <EditText
                android:id="@+id/forget_verif_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/register_verif_img"
                android:background="@null"
                android:hint="@string/forget_verif"
                android:inputType="phone"
                android:textSize="@dimen/hint_size" />

            <TextView
                android:id="@+id/get_verif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/forget_get_verif"
                android:layout_alignParentRight="true"
                android:textColor="@color/red"
                android:padding="5dp"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="17dp"
                android:background="@color/red"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/get_verif"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/line_color"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/share_code_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_below="@id/register_verif_rl"
            android:visibility="gone">
            <ImageView
                android:id="@+id/share_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/share"/>
            <EditText
                android:id="@+id/share_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/share_code"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/share_img"
                android:layout_marginLeft="16dp"
                android:textSize="@dimen/hint_size"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/login_btn"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/bind"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_below="@id/register_verif_rl"
            android:layout_marginTop="38dp"/>

    </RelativeLayout>
</ScrollView>
